# smartcities-iot

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  app.py  database_handler.py  mqtt.py  mqtt_worker.py  pyproject.toml  requirements.txt  test_endpoints.py
backend/src/: main.py  mqtt_worker.py  postgres_handler.py  redis_handler.py
backend/tests/: test_endpoints.py
context/: Dockerfile  README.md  domain.pddl  main.py  pyproject.toml  test_context.py  test_real_data.py
context-problem-generation/: Dockerfile  pyproject.toml
context-problem-generation/src/: config_manager.py  mqtt_client.py  problem_generator.py
context/pddl/: problem.pddl
context/src/: config_manager.py  mqtt_client.py  planner.py  problem_generation.py  problem_generator.py  state_manager.py  test_publisher.py
database/: 01-init.sql  Dockerfile  redis.conf
frontend/: Dockerfile  Dockerfile.template  README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  server.cjs  server.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.jsx  App.tsx
gateway/: Dockerfile  app.py  index.js  package.json  requirements.txt
messaging/: Dockerfile
orchestration/: Dockerfile  domain.pddl  orchestration.py  planner.py  pyproject.toml
orchestration/src/: domain.pddl  (+2 more)
planner/: Dockerfile  entrypoint.sh  requirements.txt
postgres/: Dockerfile
project/: README.md  devices-loan-form.docx
shared-problems/: domain.pddl
simulated-devices/: Dockerfile  pyproject.toml
simulated-sensors/: main.py  pyproject.toml
src/: README.md
(+53 files in other folders)
